# alpaca_kernel

./: .gitignore  README.md  meta.yaml  micropython_webserve.ipynb  micropythondemo.ipynb  pyproject.toml  setup.py
alpaca_kernel/: __init__.py  deviceconnector.py  install.py  kernel.py
jupyter_micropython_kernel/: __main__.py
